Add server. Modify main package.sjon

--- a/package.json
+++ b/package.json
@@ -4,7 +4,11 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start:server:dev": "nodemon server/server.js",
+    "start:client:dev": "npm run dev --prefix client",
+    "start": "concurrently \"npm run start:server:dev\" \"npm run start:client:dev \" "
+
   },
   "keywords": [],
   "author": "",
